# python-kasa

./: .coveragerc  .flake8  .gitattributes  .gitchangelog.rc  .github_changelog_generator  .gitignore  .gitmodules  .hound.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  HOWTO_RELEASE  LICENSE  README.md  RELEASING.md  SUPPORTED.md  azure-pipelines.yml  coverage.xml  dump_devinfo.py  poetry_constraints.txt  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  test.rst  test2.rst  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml  stale.yml
devtools/: README.md  __init__.py  check_readme_vs_fixtures.py  create_module_fixtures.py  dump_devinfo.py  generate_ha_dhcp_entries.py  generate_supported.py  klap-decrypt-requirements.txt  klap-decrypt.py  parse_pcap.py  parse_pcap_klap.py  parse_tapovac_map.py  perf_test.py  perftest.py  run-in-env.sh  simulator.py  smartrequests.py  update_fixtures.py
devtools/bench/: benchmark.py
devtools/helpers/: __init__.py  smartcamerarequests.py  smartcamrequests.py  smartrequests.py
docs/: __init__.py  tpap-debug-logs.md  tutorial.py
docs/source/: SUPPORTED.md  cli.rst  codeinfo.md  conf.py  contribute.md  creds_hashing.md  deprecated.md  design.rst  device.rst  deviceconfig.rst  discover.rst  featureattributes.md  guides.md  index.md  index.rst  library.md  reference.md  smartbulb.rst  smartdevice.rst  smartdimmer.rst  smartlightstrip.rst  smartplug.rst  smartstrip.rst  topics.md  tutorial.md  tutorial.rst
examples/: cli.py  discover.py
kasa/: __init__.py  aesprotocol.py  aestransport.py  auth.py  bulb.py  cachedzoneinfo.py  cleartexttransport.py  cli.py  connectionparams.py  credentials.py  daymonthstat.py  descriptors.py  device.py  device_factory.py  device_models.py  device_type.py  deviceconfig.py  dimmer.py  discover.py  effects.py  emeterrealtime.py  emeterstatus.py  eventtype.py  exceptions.py  fan.py  feature.py  firmware.py  httpclient.py  httpclientsession.py  iotprotocol.py  json.py  klapprotocol.py  klaptransport.py  module.py  modulemapping.py  modulemapping.pyi  plug.py  printmanager.py  protocol.py  protocolconfig.py  (+21 more)
kasa/cli/: __init__.py  __main__.py  common.py  device.py  discover.py  feature.py  hub.py  lazygroup.py  light.py  listen.py  lock.py  main.py  monitor.py  rest.py  schedule.py  time.py  usage.py  util.py  vacuum.py  wifi.py
kasa/experimental/: __init__.py  enabled.py  smartcamera.py  smartcameramodule.py  smartcameraprotocol.py  sslaestransport.py
kasa/interfaces/: __init__.py  alarm.py  brightness.py  childsetup.py  energy.py  fan.py  firmware.py  led.py  ledinterface.py  light.py  lighteffect.py  lighteffectinterface.py  lightpreset.py  lock.py  thermostat.py  time.py
kasa/iot/: __init__.py  bulb.py  device.py  dimmer.py  effects.py  iotbulb.py  iotcamera.py  iotdevice.py  iotdimmer.py  iotlightstrip.py  iotmodule.py  iotplug.py  iotstrip.py  iottimezone.py  lightstrip.py  plug.py  strip.py  utils.py
kasa/modules/: __init__.py  ambientlight.py  antitheft.py  cloud.py  countdown.py  emeter.py  ledmodule.py  lighteffectmodule.py  module.py  modulemapping.py  modulemapping.pyi  motion.py  ptz.py  rulemodule.py  schedule.py  time.py  usage.py
kasa/protocols/: __init__.py  iotprotocol.py  protocol.py  smartcameraprotocol.py  smartcamprotocol.py  smartprotocol.py
kasa/smart/: __init__.py  bulb.py  childdevice.py  device.py  effects.py  iotbulb.py  plug.py  smartbulb.py  smartcamera.py  smartchilddevice.py  smartdevice.py  smartirac.py  smartmodule.py  smartplug.py
kasa/smartcam/: __init__.py  detectionmodule.py  smartcamchild.py  smartcamdevice.py  smartcammodule.py
kasa/smartcamera/: __init__.py  smartcamera.py  smartcameramodule.py
kasa/tapo/: __init__.py  child_device.py  childdevice.py  tapobulb.py  tapodevice.py  tapoplug.py
kasa/tests/: common.py  conftest.py  device_fixtures.py  discovery_fixtures.py  fakeprotocol_iot.py  fakeprotocol_smart.py  fakeprotocol_smartcamera.py  fixtureinfo.py  newfakes.py  test_aestransport.py  test_bulb.py  test_camera.py  test_childdevice.py  test_cli.py  test_common_modules.py  test_connectionparams.py  test_device.py  test_device_factory.py  test_device_type.py  test_deviceconfig.py  test_dimmer.py  test_discovery.py  test_emeter.py  test_feature.py  test_feature_brightness  test_feature_brightness.py  test_feature_state.py  test_features.py  test_fixtures.py  test_httpclient.py  test_iotdevice.py  test_klap_protocol.py  test_klapprotocol.py  test_lightstrip.py  test_plug.py  test_protocol.py  test_protocol_smartcamera.py  test_readme_examples.py  test_smartdevice.py  test_smartprotocol.py  (+3 more)
kasa/transports/: __init__.py  aestransport.py  basetransport.py  klaptransport.py  linkietransport.py  sslaestransport.py  ssltransport.py  tpaptransport.py  xortransport.py
pyHS100/: __init__.py  cli.py  discover.py  protocol.py  pyHS100.py  smartbulb.py  smartdevice.py  smartplug.py  smartstrip.py  types.py  version.py
pyHS100/tests/: conftest.py  fakes.py  newfakes.py  test_bulb.py  test_fixtures.py  test_protocol.py  test_pyHS100.py  test_strip.py
tests/: README.md  conftest.py  device_fixtures.py  discovery_fixtures.py  fakeprotocol_iot.py  fakeprotocol_smart.py  fakeprotocol_smartcam.py  fakeprotocol_smartcamera.py  fixture_selection.py  fixtureinfo.py  test_aestransport.py  test_bulb.py  test_childdevice.py  test_cli.py  test_common_modules.py  test_device.py  test_device_factory.py  test_device_type.py  test_deviceconfig.py  test_devtools.py  test_dimmer.py  test_discovery.py  test_emeter.py  test_feature.py  test_fixture_selection.py  test_hs300_klap_lv2.py  test_httpclient.py  test_iotdevice.py  test_klapprotocol.py  test_lightstrip.py  test_linkietransport.py  test_plug.py  test_protocol.py  test_readme_examples.py  test_smartdevice.py  test_smartprotocol.py  test_sslaestransport.py  test_strip.py
tests/cli/: test_hub.py  test_vacuum.py
tests/fixtures/: ES20M(US)_1.0_1.0.11.json  HS200(US)_5.0_1.0.11.json  (+15 more)
(+635 files in other folders)
